Сверстал секцию 'work'

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,11 +14,12 @@
 
 <body>
 	<div class="site-container">
-		@include('../components/header/header.html')
+		<!-- @include('../components/header/header.html') -->
 		<main class="main">
-			@include('chunk/hero.html')
+			<!-- @include('chunk/hero.html') -->
+			@include('chunk/work.html')
 		</main>
-		@include('chunk/footer.html')
+		<!-- @include('chunk/footer.html') -->
 	</div>
 	<script src="js/scripts.min.js"></script>
 </body>
