--- a/src/html/chunk/hero.html
+++ b/src/html/chunk/hero.html
@@ -1,4 +1,5 @@
 <section class="section">
 	<div class="container">
+		<div class="hero">@include('../../components/slider/slider.html')</div>
 	</div>
 </section>
