--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,7 +8,7 @@
 
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="theme-color" content="#111111">
-	<title>Orange</title>
+	<title>Devtest.</title>
 	<link rel="stylesheet" href="css/styles.min.css">
 </head>
 
