--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,7 @@
 		<main class="main">
 			@include('chunk/hero.html')
 			@include('chunk/work.html')
+			@include('chunk/team.html')
 		</main>
 		@include('chunk/footer.html')
 	</div>
