--- a/src/html/chunk/footer.html
+++ b/src/html/chunk/footer.html
@@ -1,5 +1,8 @@
 <footer class="footer">
 	<div class="container">
-
+		<div class="footer__wrap">
+			<span class="footer__copywriting">&#169; 2016 clemo.</span>
+			<span class="footer__rights">all rights reserved</span>
+		</div>
 	</div>
 </footer>
