Сверстал секцию 'feedback'

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,7 @@
 			@include('chunk/hero.html')
 			@include('chunk/work.html')
 			@include('chunk/team.html')
+			@include('chunk/feedback.html')
 		</main>
 		@include('chunk/footer.html')
 	</div>
